--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">20 UI YoParker</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="rent_a_parking">Rent A Parking</string>
+    <string name="commercial_parking_space">commercial parking space</string>
+    <string name="private_park">Private Park</string>
+    <string name="button">button</string>
 </resources>
